@@ -1,3 +1,10 @@
+** v4.30 19.08.2019**
+* More code cleanup.
+* Fixed an issue, which can happen with BenikUI FlightMode.
+* Added a description for my Tags in the UnitFrame options.
+* Added option to change the Paragon Bar Color and Text Style.
+* Added a notification for Paragon Rewards.
+
 ** v4.29 18.08.2019**
 * Code Cleanup.
 * Fixed an error in Notifications.
