@@ -17,19 +17,11 @@ local DISABLED_FONT_COLOR = DISABLED_FONT_COLOR
 
 local ChangeLogData = {
 	"Changes:",
-		"• Code Cleanup",
-		"• Fixed an error in Notifications",
-		"• Updated Community skin",
-		"• Updated ObjectiveTracker skin",
-		"• Fixed some backdrops on my skins",
-		"• Fixed the border from AutoButtons",
-		"• Removed the NP Castbar Target.",
-		"• Updated BW/Details Profiles",
-		"• Removed OzCooldowns Profile",
-		"• Added iFilger Profile",
-		"• Layout Updates",
-		"• Added an own ProgressBar over the Minimap",
-
+		"• More code cleanup",
+		"• Fixed an issue, which can happen with BenikUI FlightMode",
+		"• Added a description for my Tags in the UnitFrame options",
+		"• Added option to change the Paragon Bar Color and Text Style",
+		"• Added a notification for Paragon Rewards",
 		-- "• ''",
 	" ",
 	"Notes:",
