@@ -1,3 +1,10 @@
+[b][color=orange]v4.30[/color], 19.08.2019[/b][list]
+[*]More code cleanup.
+[*]Fixed an issue, which can happen with BenikUI FlightMode.
+[*]Added a description for my Tags in the UnitFrame options.
+[*]Added option to change the Paragon Bar Color and Text Style.
+[*]Added a notification for Paragon Rewards.[/list]
+
 [b][color=orange]v4.29[/color], 18.08.2019[/b][list]
 [*]Code Cleanup.
 [*]Fixed an error in Notifications.
